--- a/trunk/res/layout/user_password_dialog.xml
+++ b/trunk/res/layout/user_password_dialog.xml
@@ -37,7 +37,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dip"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:layout_weight="1"
@@ -51,10 +51,11 @@
             android:layout_marginRight="4dp"
             android:layout_marginTop="4dp"
             android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890.-_"
-            android:inputType="textPersonName"
+            android:imeOptions="actionNext"
+            android:inputType="textUri"
             android:maxLength="16"
             android:maxLines="1"
-            android:textSize="18dp" >
+            android:textSize="18sp" >
 
             <requestFocus>
             </requestFocus>
@@ -67,10 +68,11 @@
             android:layout_marginBottom="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginTop="4dp"
+            android:imeOptions="actionDone"
             android:inputType="textPassword"
             android:maxLength="12"
             android:maxLines="1"
-            android:textSize="18dp" >
+            android:textSize="18sp" >
         </EditText>
     </LinearLayout>
 
